# zxcaml

./: .gitignore  CHANGELOG.md  INSTALLING.md  README.md  anf_tests.zig  build.zig  build.zig.zon  demo.sh  init.sh  inline_tests.zig  package.json  wrangler.toml
spike/ocaml-cmt-read/: dune  hello.ml  reader.ml
tests/: Cargo.toml  assert_panic_test.rs  counter_test.rs  counter_v2_test.rs  crypto_demo_test.rs  demo_test.rs  external_demo_test.rs  hello_test.rs  logonly_test.rs  mutual_rec_test.rs  noop_test.rs  pda_storage_test.rs  region_demo_test.rs  simple_cpi_test.rs  string_demo_test.rs  tail_rec_test.rs  test_util.zig  token_vault_test.rs  transfer_sol_test.rs  vault_test.rs  vault_v2_test.rs
tests/anf/: run.zig
tests/codegen/: external_bytes_return.ml  external_bytes_return.zig  pattern_extensions.ml  pattern_extensions.zig  region_let_storage.ml  region_let_storage.zig
tests/golden/: adt_option.core.snapshot  adt_option.ml  arithmetic.core.snapshot  arithmetic.ml  assert_expr.core.snapshot  assert_expr.ml  const_fold_nested_match.core.snapshot  const_fold_nested_match.ml  dce_division_by_zero.core.snapshot  if_then_else.core.snapshot  if_then_else.ml  let_binding.core.snapshot  let_binding.ml  list_construct.core.snapshot  match_basic.core.snapshot  match_list.core.snapshot  match_list.ml  mutual_recursion.core.snapshot  nested_guard_match.core.snapshot  nested_guard_match.ml  nested_let.core.snapshot  record_nested_param.core.snapshot  record_nested_param.ml  recursion.core.snapshot  recursion.ml  run.zig  tuple_record.core.snapshot  tuple_record.ml  user_adt.core.snapshot  user_adt.ml
tests/idl/: entrypoint.ml  no_entrypoint.ml  run.zig
tests/inline/: run.zig
tests/property/: determinism.zig
tests/ui/: adt_option.ml  arithmetic.ml  assert_expr.ml  assert_false.ml  assert_false.ml.expected  exception.ml  run.zig  (+13 more)
(+152 files in other folders)
