[package]
name = "zxcaml-tests"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false
autoexamples = false
autotests = false

[dependencies]
mollusk-svm = "0.12.1-agave-4.0"
solana-pubkey = "4.2.0"
solana-account = "3.4.0"
solana-instruction = "3.4.0"
solana-program-error = "3.0.1"
solana-system-program = "4.0.0-beta.6"
solana-svm-log-collector = "=4.0.0-rc.0"
solana-sha256-hasher = { version = "3.1.0", features = ["sha2"] }
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }

[[test]]
name = "hello_test"
path = "hello_test.rs"

[[test]]
name = "demo_test"
path = "demo_test.rs"

[[test]]
name = "simple_cpi_test"
path = "simple_cpi_test.rs"

[[test]]
name = "counter_test"
path = "counter_test.rs"

[[test]]
name = "vault_test"
path = "vault_test.rs"

[[test]]
name = "external_demo_test"
path = "external_demo_test.rs"

[[test]]
name = "crypto_demo_test"
path = "crypto_demo_test.rs"

[[test]]
name = "region_demo_test"
path = "region_demo_test.rs"

[[test]]
name = "string_demo_test"
path = "string_demo_test.rs"

[[test]]
name = "tail_rec_test"
path = "tail_rec_test.rs"

[[test]]
name = "mutual_rec_test"
path = "mutual_rec_test.rs"
